<package>
  <name>myro</name>
  <version>1.0</version>

  <description>packages needed for myro simulation in rviz</description>
  <author email="bogeuh@gmail.com">Bogeuh</author>

  <maintainer email="bogeuh@gmail.com">Bogeuh</maintainer>

  <license>BSD</license>
  <url>https://github.com/bogeuh/MyRo</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
